FixedIndexFooter-(Z-Index)

--- a/HTML/style.css
+++ b/HTML/style.css
@@ -61,6 +61,7 @@ footer{
 #mainFooter {
     background: #212529;
     color:white;
+    z-index: 100;
 }
 
 
